# fjack2jack

./: LICENSE  README.md  pyproject.toml
src/: __main__.py  anf.py  beta_reduction.py  cps.py  env.py  fjack.py  jack.py  lambda_lifting.py  lis.py  new_jack.py  passes.py  ssa.py
src/fjack/: ast.py  lexer.py  parser.py  token.py
src/jack/: ast.py
tests/: test_anf.py  test_beta_reduction.py  test_cps.py  test_fjack.py  test_jack.py  test_lambda_lifting.py  test_ssa.py
tests/fjack/: test_ast.py  test_fjack_lexer.py  test_fjack_parser.py  test_lexer.py  test_parser.py
tests/jack/: test_jack_ast.py
